Fix for whitespace at bottom of page

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 *{
     margin: 0;
+    padding: 0;
     font-family: arial, sans-serif;
 }
 
 /* 
 MAIN 
 */
+
+body { min-height: 100% } 
+html { height: 100%    }
 
 :root{
     --main-color: black;
@@ -24,7 +28,9 @@ input:-webkit-autofill {
     background-color: var(--main-color);
     background-image: url('images/clear-sky.jpg');
     background-size: cover;
-    
+    background-repeat: no-repeat;
+  background-attachment: fixed;
+    padding-bottom: 2.5rem;
 }
 
 /* 
@@ -98,6 +104,7 @@ WEATHER DISPLAY
     overflow:hidden; 
     word-wrap:break-word;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
 }
 
 #location{
